tests/tests/ui-unstable/no-arguments.stderr
thread 'rustc' panicked at 'argument must be a single string literal, but got 0 arguments', impl/src/lib.rs:58:9
note: Run with `RUST_BACKTRACE=1` for a backtrace.
error: proc macro panicked
  --> $DIR/no-arguments.rs:13:5
   |
13 |     indoc!();
   |     ^^^^^^^^^
   |
   = help: message: argument must be a single string literal, but got 0 arguments

